[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfnbutils"
version = "1.0.0b"  # Replace with the actual version string
description = "Utilities for working with IPykernel/DFKernel notebooks"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD"}
authors = [{name = "Dataflow Notebook Team", email = "dataflownb@users.noreply.github.com"}]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Jupyter", "notebooks", "conversion", "utilities"]
urls = {homepage = "https://github.com/dataflownb/dfnbutils"}

dependencies = [
"notebook>=5.4",
"ipython>=7.17.0",
"astor>=0.7",
"asttokens>1.1",
]

[project.optional-dependencies]
test = [
    "nbformat",
    "nose-timer",
    "nbconvert"
]

[tool.setuptools]
packages = ["dfnbutils"]